syntax = "proto3";

package pymaid.apps.monitor;
option py_generic_services = true;

import "pymaid/pb/pymaid.proto";

service MonitorService {
    rpc notify_heartbeat(pymaid.pb.Void) returns (pymaid.pb.Void);
}
